syntax = "proto3";
package lumera.audit.v1;

option go_package = "x/audit/v1/types";

import "amino/amino.proto";
import "gogoproto/gogo.proto";

// Params defines the parameters for the audit module.
message Params {
  option (gogoproto.equal) = true;

  uint64 reporting_window_blocks      = 1;

  uint32 peer_quorum_reports          = 3;
  uint32 min_probe_targets_per_window = 4;
  uint32 max_probe_targets_per_window = 5;

  repeated uint32 required_open_ports = 6;

  // Minimum required host free capacity (self reported).
  // free% = 100 - usage%
  // A usage% of 0 is treated as "unknown" (no action).
  uint32 min_cpu_free_percent = 7;
  uint32 min_mem_free_percent = 8;
  uint32 min_disk_free_percent = 9;

  // Number of consecutive windows a required port must be reported CLOSED by peers
  // at or above peer_port_postpone_threshold_percent before postponing the supernode.
  uint32 consecutive_windows_to_postpone = 10;

  // How many completed windows to keep in state for window-scoped data like WindowSnapshot,
  // AuditReport, and related indices. Pruning runs at window end.
  uint64 keep_last_window_entries = 11;

  // Minimum percent (1-100) of peer reports that must report a required port as CLOSED
  // for the port to be treated as CLOSED for postponement purposes.
  //
  // 100 means unanimous.
  // Example: to approximate a 2/3 threshold, use 66 (since 2/3 â‰ˆ 66.6%).
  uint32 peer_port_postpone_threshold_percent = 12;
}
